adding demo html

--- a/phone.html
+++ b/phone.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div id="map"></div>
-    <p id="startLat"></p>
-    <p id="startLon"></p>
+
+    <p>Click the button to get your coordinates.</p>
+
+<button onclick="getLocation()">Try It</button>
+
+<p id="demo"></p>
 </body>
 <script src="phoneDemo.js"></script>
 </html>
